# DDE

./: .gitignore  Data_clean.parquet  EDA.ipynb  README.md  data_loader.py  pyproject.toml  write_to_db.py
etl/: extract.py  load.py  main.py  transform.py
experiments/: data_loader.py
