[project]
name = "dde"
version = "0.1.0"
description = ""
authors = [
    {name = "BezLiz",email = "lizabezzubova@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "wget (>=3.2,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
